package minesweeper.gui;

import java.awt.*;

public class ColorPallet {

    public final static Color GRAY = new Color(60, 63, 65);
    public final static Color DARK_GRAY = new Color(43, 43, 43);

}
