@startuml
class minesweeper.Main {
+ {static} void main(String[])
}
class minesweeper.gui.borderpanel.InputBorderPanel {
~ {static} void addMouseMotionListener(BorderPanel)
}
class minesweeper.gui.gamepanel.GamePanel {
- {static} int SHADOW_SIZE
~ MyFrame frame
~ int current_field_size
+ void paint(Graphics)
- void paintField(Graphics)
- void paintClosedField(Graphics,int,int,int)
- void paintFlag(Graphics,int,int,int)
- void paintBomb(Graphics,int,int,int)
- void paintNumbers(Graphics,int,int,int,int)
}
class minesweeper.gui.ColorPallet {
+ {static} Color GRAY
+ {static} Color DARK_GRAY
}
class minesweeper.gamelogic.Tile {
- int y
- int x
- int number
- boolean bomb
- boolean closed
- boolean flagged
+ int getY()
+ int getX()
+ int getNumber()
+ void setNumber(int)
+ boolean isBomb()
+ void setBomb(boolean)
+ boolean isClosed()
+ void setClosed(boolean)
+ boolean isFlagged()
+ void setFlagged(boolean)
}
class minesweeper.gui.infopanel.InputInfoPanel {
~ {static} void addMouseMotionListener(InfoPanel)
}
class minesweeper.gui.MyFrame {
- {static} float BORDER_FACTOR
- {static} float INFO_PANEL_HEIGHT_FACTOR
~ GameState gameState
- void initFrame(JPanel,GamePanel,InfoPanel)
- void generateLayout(JPanel,GamePanel,InfoPanel)
- void generateInfoPanelLayout(JPanel,InfoPanel,int)
- void generateGamePanelLayout(JPanel,InfoPanel,GamePanel,int)
+ GameState getGameState()
}
class minesweeper.gui.infopanel.InfoPanel {
+ void paint(Graphics)
}
class minesweeper.gui.borderpanel.BorderPanel {
+ void paint(Graphics)
}
class minesweeper.gui.gamepanel.InputGamePanel {
- GamePanel gamePanel
- void spacePressed()
+ void mouseReleased(MouseEvent)
- int pixelLocationToTileCoordinate(int)
- boolean isTileCoordinateValid(int,int)
}
class minesweeper.gamelogic.GameState {
- int flagsPlaced
- int bombsLeft
- int fieldWidth
- int fieldHeight
- Tile[][] field
- boolean isFieldGenerated
- boolean gameOver
+ int getFlagsPlaced()
+ int getBombsLeft()
+ int getFieldWidth()
+ int getFieldHeight()
+ Tile[][] getField()
+ void leftClicked(int,int)
- void recursiveReveal(int,int)
- void generateField(int,int)
- void placeBombs(int,int)
- void createNumbers()
+ void rightClicked(int,int)
+ void spacePressed(int,int)
- Tile[] gatherSurroundingTiles(int,int)
- int countSurroundingBombs(Tile[],int,int)
- int countSurroundingFlags(Tile[],int,int)
}


minesweeper.gui.gamepanel.JPanel <|-- minesweeper.gui.gamepanel.GamePanel
minesweeper.gui.JFrame <|-- minesweeper.gui.MyFrame
minesweeper.gui.infopanel.JPanel <|-- minesweeper.gui.infopanel.InfoPanel
minesweeper.gui.borderpanel.JPanel <|-- minesweeper.gui.borderpanel.BorderPanel
java.awt.event.MouseAdapter <|-- minesweeper.gui.gamepanel.InputGamePanel
@enduml